<resources>
    <string name="app_name">Camera mini</string>
    <string name="action_settings">Settings</string>
    <string name="turn_left">Xoay trái</string>
    <string name="turn_right">Xoay phải</string>
    <string name="customize_rotate">Xoay tùy chọn</string>
    <string name="cut_image">Xén ảnh</string>
    <string name="change_shade">Đổi sắc thái ảnh</string>
    <string name="load_image">Chọn ảnh</string>
    <string name="save_image">Lưu ảnh</string>
    <string name="insert_texxt">Chèn chữ</string>
    <string name="insert_frame">Chèn khung</string>
    <string name="delete">Xóa</string>
    <string name="cancel">Hủy</string>
    <string name="camera">Camera</string>
    <string name="about">Thông tin</string>
    <string name="save_confirm">Lưu ảnh</string>
    <string name="save_message">Bạn có muốn lưu ảnh không?</string>
    <string name="Yes">Có</string>
    <string name="No">Không</string>
    <string name="clarify_image">Độ tương phản</string>
    <string name="change_portrait_image">Ảnh chân dung</string>
    <string name="change_color_image">Đổi màu ảnh</string>
    <string name="title_activity_change_shade">Đổi sắc thái</string>
    <string name="title_activity_clarify_portrait">Độ tương phản</string>
    <string name="title_activity_change_color">Đổi màu ảnh</string>
    <string name="title_activity_insert_frame">Chèn khung</string>
    <string name="title_activity_insert_text">Chèn chữ</string>
    <string name="title_activity_cut_image">Cắt ảnh</string>
    <string name="title_activity_portrait">Ảnh chân dung</string>
    <string name="about_content">Ứng dụng chụp hình và chỉnh sửa hình ảnh
    với các chức năng: cắt ảnh, chèn chữ,chèn khung,
        đôỉ màu đối tượng trong ảnh, đổi sắc thái
    ảnh, điều chỉnh độ tương phản, ảnh chân dung… \n\n
    Người thực hiện:
    \tLê Minh Bằng, Văn Tuấn Khanh\n
    Mọi ý kiến đóng góp xin gửi về email:\n
    minhbangle96@gmail.com</string>
</resources>
