<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.leminhbang.camearamini.MainActivity">

    <item
        android:id="@+id/action_camera"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/camera"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_cancel"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/cancel"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_turn_left"
        android:orderInCategory="100"
        android:title="@string/turn_left"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_turn_right"
        android:orderInCategory="100"
        android:title="@string/turn_right"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_customize_rotate"
        android:orderInCategory="100"
        android:title="@string/customize_rotate"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_load_image"
        android:orderInCategory="100"
        android:title="@string/load_image"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:title="@string/save_image"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>

